src/objects/CRMWebClient__OmniChannel_Status_Mapping__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>CRMWebClient__cic4sf_entering_go_to_on_omni__c</fullName>
        <description>The status to go to on Omni-Channel when PureConnect for Salesforce enters the entering status.</description>
        <inlineHelpText>The status to go to on Omni-Channel when PureConnect for Salesforce enters the entering status.</inlineHelpText>
        <label>PureConnect Entering Go To On Omni</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__cic4sf_entering_status__c</fullName>
        <description>The status to listen for on PureConnect for Salesforce, which will trigger a status change on Omni-Channel.</description>
        <inlineHelpText>The status to listen for on PureConnect for Salesforce, which will trigger a status change on Omni-Channel.</inlineHelpText>
        <label>PureConnect Entering Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__cic4sf_exiting_go_to_on_omni__c</fullName>
        <description>The status to go to on Omni-Channel when PureConnect for Salesforce exitings the exiting status.</description>
        <inlineHelpText>The status to go to on Omni-Channel when PureConnect for Salesforce exitings the exiting status.</inlineHelpText>
        <label>PureConnect Exiting Go To On Omni</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__cic4sf_exiting_status__c</fullName>
        <description>The status to listen to on PureConnect for Salesforce (upon exiting) that will trigger a status change on Omni-Channel.</description>
        <inlineHelpText>The status to listen to on PureConnect for Salesforce (upon exiting) that will trigger a status change on Omni-Channel.</inlineHelpText>
        <label>PureConnect Exiting Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__omni_channel_entering_go_to_on_cic4sf__c</fullName>
        <description>The status to go to on PureConnect for Salesforce when the entering status is entered on Omni-Channel.</description>
        <inlineHelpText>The status to go to on PureConnect for Salesforce when the entering status is entered on Omni-Channel.</inlineHelpText>
        <label>Omni Ch. Entering Go To On PureConnect</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__omni_channel_entering_status__c</fullName>
        <description>The status to listen for on Omni-Channel that triggers a status change on PureConnect for Salesforce</description>
        <label>Omni Channel Entering Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__omni_channel_exiting_go_to_on_cic4sf__c</fullName>
        <description>The status to go to on PureConnect for Salesforce when the exiting status is exited on Omni-Channel.</description>
        <inlineHelpText>The status to go to on PureConnect for Salesforce when the exiting status is exited on Omni-Channel.</inlineHelpText>
        <label>Omni Ch. Exiting Go To On PureConnect</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__omni_channel_exiting_status__c</fullName>
        <description>The status to listen for on Omni-Channel (upon exiting) that triggers a status change on PureConnect for Salesforce.</description>
        <inlineHelpText>The status to listen for on Omni-Channel (upon exiting) that triggers a status change on PureConnect for Salesforce.</inlineHelpText>
        <label>Omni Channel Exiting Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Omni-Channel Status Mapping</label>
    <listViews>
        <fullName>CRMWebClient__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OmniChannel Status Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omni-Channel Status Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>